# noesis

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
autograd/: backprop.py
backend/: Dockerfile  manage.py  requirements.txt
backend/api/: admin.py  models.py  routing.py  serializers.py  urls.py
backend/backend/: asgi.py  settings.py
data/: arithmetique_holdout.txt  arithmetique_train.txt  calc_mod10.txt  calc_single.txt  calculatrice.txt  corpus_enrichi.txt  input.txt  le_chat.txt
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: ARCHITECTURE.md  App.tsx  index.css
generation/: generator.py  sampling.py
generation/tests/: test_sampling.py
modules/: attention.py  base_module.py  embedding.py  feedforward.py  layernorm.py  linear.py  loss.py  positional_encoding.py  softmax.py  tokenizer.py  transformer_block.py  transformer_model.py
modules/tokenizers/: __init__.py  base.py  char_tokenizer.py  (+2 more)
optim/: adam.py  sgd.py
tests/: helpers.py  test_adam.py  test_attention.py  test_backprop.py  test_data_loader.py  test_embedding.py  test_feedforward.py  test_generator.py  test_layernorm.py  test_linear.py  test_loss.py  test_positional_encoding.py  test_sgd.py  test_tokenizer.py  test_trainer.py  test_transformer_block.py  test_transformer_model.py
training/: data_loader.py  lr_scheduler.py  trainer.py
(+173 files in other folders)
